Fix horizontal scrollbar appearing whereas it should not

--- a/templates/style/_navbar.scss
+++ b/templates/style/_navbar.scss
@@ -127,6 +127,7 @@ div.nav-container {
                 box-shadow: none;
                 background-color: var(--color-background);
                 height: 100%;
+                width: 50%;
             }
         }
 
